[package]
name = "tidepool-keeper"
version = "0.1.0"
edition = "2021"
description = "Rebalance keeper bot and GraphQL indexer for TidePool"

[[bin]]
name = "keeper"
path = "src/main.rs"

[dependencies]
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-account-decoder = "1.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bs58 = "0.5"
shellexpand = "3"
