[package]
name = "tidepool-vault"
version = "0.1.0"
description = "Auto-rebalancing vault for TidePool CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tidepool_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
tidepool-clmm = { path = "../tidepool-clmm", features = ["cpi"] }
